# pork

./: README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
src/pork/: __init__.py  corr.py  utils.py
tests/: test_corr.py
