[project]
name = "pork"
version = "0.1.0"
description = "Pack of random korrelations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "jupyterlab>=4.4.1",
    "pre-commit>=2.20.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.8",
    "tox-uv>=1.11.3",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-material>=9.6.12",
    "mkdocstrings-python>=1.16.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
target-version = "py39"
line-length = 120
fix = true


[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]


[tool.ruff.format]
preview = true
